// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageExtractor should extract project with script linkCreation 1`] = `
Object {
  "files": Array [
    "build-tests/package-extractor-test-01/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-01/package.json",
    "build-tests/package-extractor-test-01/src/index.js",
    "build-tests/package-extractor-test-01/src/subdir/file.js",
    "build-tests/package-extractor-test-02/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-02/package.json",
    "build-tests/package-extractor-test-02/src/index.js",
    "build-tests/package-extractor-test-03/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-03/package.json",
    "build-tests/package-extractor-test-03/src/index.js",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/buffer.buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/disposable.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/indexable.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/iterators.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dom-events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/globals.typedarray.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/readline/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/sea.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/test.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/ts5.6/buffer.buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/ts5.6/globals.typedarray.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/ts5.6/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/LICENSE",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/README.md",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/api.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/balanced-pool.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/cache.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/client.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/connector.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/content-type.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/cookies.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/diagnostics-channel.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/dispatcher.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/env-http-proxy-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/errors.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/eventsource.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/fetch.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/file.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/filereader.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/formdata.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/global-dispatcher.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/global-origin.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/handlers.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/header.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/index.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/interceptors.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-client.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-errors.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-interceptor.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-pool.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/package.json",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/patch.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/pool-stats.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/pool.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/proxy-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/readable.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/retry-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/retry-handler.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/util.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/webidl.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/websocket.d.ts",
    "create-links.js",
  ],
  "links": Array [
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-02",
      "targetPath": "build-tests/package-extractor-test-02",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-02/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-03/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/undici-types",
      "targetPath": "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types",
    },
  ],
  "mainProjectName": "package-extractor-test-01",
  "projects": Array [
    Object {
      "path": "build-tests/package-extractor-test-01",
      "projectName": "package-extractor-test-01",
    },
    Object {
      "path": "build-tests/package-extractor-test-02",
      "projectName": "package-extractor-test-02",
    },
    Object {
      "path": "build-tests/package-extractor-test-03",
      "projectName": "package-extractor-test-03",
    },
  ],
}
`;

exports[`PackageExtractor should extract project with script linkCreation and custom linkCreationScriptPath 1`] = `
Object {
  "files": Array [
    "build-tests/package-extractor-test-01/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-01/package.json",
    "build-tests/package-extractor-test-01/src/index.js",
    "build-tests/package-extractor-test-01/src/subdir/file.js",
    "build-tests/package-extractor-test-02/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-02/package.json",
    "build-tests/package-extractor-test-02/src/index.js",
    "build-tests/package-extractor-test-03/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-03/package.json",
    "build-tests/package-extractor-test-03/src/index.js",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/buffer.buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/disposable.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/indexable.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/compatibility/iterators.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/dom-events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/globals.typedarray.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/readline/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/sea.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/test.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/ts5.6/buffer.buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/ts5.6/globals.typedarray.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/ts5.6/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/LICENSE",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/README.md",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/api.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/balanced-pool.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/cache.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/client.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/connector.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/content-type.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/cookies.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/diagnostics-channel.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/dispatcher.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/env-http-proxy-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/errors.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/eventsource.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/fetch.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/file.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/filereader.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/formdata.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/global-dispatcher.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/global-origin.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/handlers.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/header.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/index.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/interceptors.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-client.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-errors.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-interceptor.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/mock-pool.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/package.json",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/patch.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/pool-stats.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/pool.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/proxy-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/readable.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/retry-agent.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/retry-handler.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/util.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/webidl.d.ts",
    "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types/websocket.d.ts",
    "foo/bar/baz.js",
  ],
  "links": Array [
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/@types/node",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-02",
      "targetPath": "build-tests/package-extractor-test-02",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-02/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-03/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "common/temp/default/node_modules/.pnpm/@types+node@20.17.19/node_modules/undici-types",
      "targetPath": "common/temp/default/node_modules/.pnpm/undici-types@6.19.8/node_modules/undici-types",
    },
  ],
  "mainProjectName": "package-extractor-test-01",
  "projects": Array [
    Object {
      "path": "build-tests/package-extractor-test-01",
      "projectName": "package-extractor-test-01",
    },
    Object {
      "path": "build-tests/package-extractor-test-02",
      "projectName": "package-extractor-test-02",
    },
    Object {
      "path": "build-tests/package-extractor-test-03",
      "projectName": "package-extractor-test-03",
    },
  ],
}
`;
